ID検索の関数の作成。 簡易UIの作成。 ID辞書、階層、コレクションの作成

--- a/FactStatusTool.csproj
+++ b/FactStatusTool.csproj
@@ -7,10 +7,10 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Scripts\Interface\" />
     <Folder Include="Tests\Interface\" />
   </ItemGroup>
 
